src/test/ui/rfc1598-generic-associated-types/shadowing.stderr
error[E0403]: the name `T` is already used for a generic parameter in this item's generic parameters
  --> $DIR/shadowing.rs:19:14
   |
LL | trait ShadowT<T> {
   |               - first use of `T`
LL |     type Bar<T>;
   |              ^ already used

error[E0403]: the name `T` is already used for a generic parameter in this item's generic parameters
  --> $DIR/shadowing.rs:27:14
   |
LL | impl<T> NoShadowT<T> for Option<T> {
   |      - first use of `T`
LL |     type Bar<T> = i32;
   |              ^ already used

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0403`.
